--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "example",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+	"targets": {
+		"main": {
+			"outputFormat": "esmodule"
+		}
+	},
   "browserslist": [
     "last 1 Chrome versions"
   ],
